--- a/index.html
+++ b/index.html
@@ -12,15 +12,30 @@
   </head>
   <body>
     <div id="app">
-      <button @click="play" :disabled="isPlaying">Start Game</button>
-      <div id="game">
+      <!-- <button @click="play" :disabled="isPlaying">Start Game</button> -->
+      <div v-if="!isPlaying && !gameOver" class="playFrame">
+        Lets whack some moles!
+        <div class="playButton" @click="play()">GO</div>
+      </div>
+      <div v-if="!gameOver" id="game" :class="{notPlaying: !isPlaying}">
         <img
           v-for="hole in moleHoles"
           :src="moleInHole(hole)"
           class="moleHole"
-          
           @click="whackMole(hole)"
         />
+      </div>
+      <div v-if="!gameOver" class="timer" id="timer">
+        <div>Time left:</div>
+        {{playTimeLeft}}
+        <div class="score" id="score">Score: {{molesWhacked}}</div>
+      </div>
+      <div v-if="gameOver">
+        <div>
+          GAME OVER!
+        </div>
+        <div>Total Score: {{molesWhacked}}</div>
+        <div @click="play()" class="playButton" style="border-radius: 20% / 50%;">Restart?</div>
       </div>
     </div>
     <script src="app.js" async defer></script>
